--- a/poem.rmd
+++ b/poem.rmd
@@ -15,10 +15,18 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
-
+A BOAT, beneath a sunny sky  
+Lingering onward dreamily  
+In an evening of July--  
+Children three that nestle near,  
+Eager eye and willing ear,
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
-
+Pleased a simple tale to hear--  
+Long has paled that sunny sky;  
+Echoes fade and memories die;  
+Autumn frosts have slain July.  
+Still she haunts me, phantomwise,  
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
